2.1.0/_sources/gallery/userdemo/annotate_text_arrow.rst.txt


.. _sphx_glr_gallery_userdemo_annotate_text_arrow.py:


===================
Annotate Text Arrow
===================





.. image:: /gallery/userdemo/images/sphx_glr_annotate_text_arrow_001.png
    :align: center





.. code-block:: python


    import numpy as np
    import matplotlib.pyplot as plt

    fig, ax = plt.subplots(figsize=(5, 5))
    ax.set_aspect(1)

    x1 = -1 + np.random.randn(100)
    y1 = -1 + np.random.randn(100)
    x2 = 1. + np.random.randn(100)
    y2 = 1. + np.random.randn(100)

    ax.scatter(x1, y1, color="r")
    ax.scatter(x2, y2, color="g")

    bbox_props = dict(boxstyle="round", fc="w", ec="0.5", alpha=0.9)
    ax.text(-2, -2, "Sample A", ha="center", va="center", size=20,
            bbox=bbox_props)
    ax.text(2, 2, "Sample B", ha="center", va="center", size=20,
            bbox=bbox_props)


    bbox_props = dict(boxstyle="rarrow", fc=(0.8, 0.9, 0.9), ec="b", lw=2)
    t = ax.text(0, 0, "Direction", ha="center", va="center", rotation=45,
                size=15,
                bbox=bbox_props)

    bb = t.get_bbox_patch()
    bb.set_boxstyle("rarrow", pad=0.6)

    ax.set_xlim(-4, 4)
    ax.set_ylim(-4, 4)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.020 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: annotate_text_arrow.py <annotate_text_arrow.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: annotate_text_arrow.ipynb <annotate_text_arrow.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
